MyBrand-BE~updates: We are pushing new stuff in mySwagger.json
